--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
+chrono-tz = "0.9.0"
 ratatui = "0.27.0"
 sysinfo = "0.31.2"
